--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>api_connector</title>
+    <title>api connector</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -11,7 +11,7 @@
 
   <body>
   <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="<%=  %>">api_connector</a>
+    <a class="navbar-brand" href="<%=  %>">api connector</a>
   </nav>
 
     <p class="notice"><%= notice %></p>
